Load screenshots directly from flickr pool.
Now, new pictures posted to the Antares Screenshots pool will automatically be
displayed on the website, without any manual update process.

--- a/views/antares.jade
+++ b/views/antares.jade
@@ -21,7 +21,8 @@
   | [download-source]:    http://antares.googlecode.com/files/Antares-Source-0.3.0.zip
 
 h3 Screenshots
-.screenshots
-  - each picture in page.screenshots
-    a(href=picture.href)
-      img(src=picture.src, title=picture.title)
+#antares-screenshots.screenshots
+  :javascript
+    | window.addEvent('domready', function() {
+    |   AresCentral.loadScreenshots('antares-screenshots', '1519223@N24');
+    | });
