--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,9 @@ html
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono')
     - if (page.alternate)
       link(rel='alternate', type='application/atom+xml', title=site.title, href=page.alternate)
+    script(src='/scripts/mootools-core-1.3.js')
+    script(src='/scripts/mootools-more.js')
+    script(src='/scripts/arescentral.js')
   body
     #header
       h1
