--- a/views/antares.jade
+++ b/views/antares.jade
@@ -7,18 +7,18 @@
   | necessary to support running on modern computers.
   | 
   | >
-  | > The latest version of Antares is 0.3.0, released 16 September, 2010.  It is licensed under
-  | > the [GNU General Public License 2.0][gpl].
+  | > The latest version of Antares is 0.3.1, released 16 January, 2011.  It is licensed under the
+  | > [GNU General Public License 2.0][gpl].
   | >
-  | > * Download [Antares 0.3.0 for Mac OS X][download-osx].
-  | > * Download the [Antares 0.3.0 sources][download-source].
+  | > * Download [Antares 0.3.1 for Mac OS X][download-osx].
+  | > * Download the [Antares 0.3.1 sources][download-source].
   | >
   | {: .gpl}
   | 
   | [open-source]:        /open-source
   | [gpl]:                http://creativecommons.org/licenses/GPL/2.0/
-  | [download-osx]:       http://antares.googlecode.com/files/Antares-0.3.0.zip
-  | [download-source]:    http://antares.googlecode.com/files/Antares-Source-0.3.0.zip
+  | [download-osx]:       http://antares.googlecode.com/files/Antares-0.3.1.zip
+  | [download-source]:    http://antares.googlecode.com/files/Antares-Source-0.3.1.zip
 
 h3 Screenshots
 #antares-screenshots.screenshots
