Antares link revision.
Point to the Google Code page and issue tracker, but point the downloads at
downloads.arescentral.org.

--- a/views/antares.jade
+++ b/views/antares.jade
@@ -6,6 +6,9 @@
   | an extremely faithful reproduction of the original Ares experience, making changes only as
   | necessary to support running on modern computers.
   | 
+  | Antares has a [Google Code project page][google-code].  Bugs and feature requests should be
+  | submitted to its [issue tracker][issues].
+  | 
   | >
   | > The latest version of Antares is 0.3.1, released 16 January, 2011.  It is licensed under the
   | > [GNU General Public License 2.0][gpl].
@@ -17,8 +20,10 @@
   | 
   | [open-source]:        /open-source
   | [gpl]:                http://creativecommons.org/licenses/GPL/2.0/
-  | [download-osx]:       http://antares.googlecode.com/files/Antares-0.3.1.zip
-  | [download-source]:    http://antares.googlecode.com/files/Antares-Source-0.3.1.zip
+  | [download-osx]:       http://downloads.arescentral.org/Antares/Antares-0.3.1.zip
+  | [download-source]:    http://downloads.arescentral.org/Antares/Antares-Source-0.3.1.zip
+  | [issues]:             http://code.google.com/p/antares/issues/list
+  | [google-code]:        http://code.google.com/p/antares/
 
 h3 Screenshots
 #antares-screenshots.screenshots
